--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-jest": "^26.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^26.4.0",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.0"
   },
   "babel": {
